# org-gdrive-backup

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Compressor.py  Dockerfile  GAdmin.py  GDrive.py  README.md  S3.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: enums.py
src/aws/: s3.py
src/google/: gadmin.py  gdrive.py
src/utils/: compressor.py  logger.py  settings.py
tests/: test_compressor.py
